Search API Autocomplete 1.x, dev (xx/xx/xxxx):
----------------------------------------------
- #1357954 by drunken monkey: Clarified documentation.
- #2079951 by drunken monkey: Fixed concatenation of words when there is a
  trailing space.
- #2023947 by drunken monkey: Fixed behavior when user input contains trailing
  whitespace.
- #2012710 by drunken monkey: Fixed $reset parameter for load functions.

Search API Autocomplete 1.0 (04/22/2013):
-----------------------------------------
First stable release of the Search API Autocomplete project.